# car-backend

./: .env.docker.example  .env.example  .gitignore  .~lock.divar 2.JSON.rtf#  Dockerfile  README.md  alembic.ini  celerybeat-schedule  cities 2.rtf  clean_architecture_backend_skill.txt  divar 2.JSON.rtf  docker-compose.yml  prd.txt  pyproject.toml  فرصت خودرو — ورود.html
ai-gen-doc/: CHANGELOG.md  README.md  api-reference.md  divar-sample-html-element.html  flow-diagram.md  hamrah-mechanic-sample-html.html  implementation.md  khodro45.html  setup-guide.md  smaple-khodro45.html
alembic/: env.py
khodro45data/: brands.json  models.json  trims.json  years.json
scripts/: dedupe_shared_pools.py  dev_setup.sh  docker-down.sh  docker-first-run.sh  docker-up.sh  extract_hamrah_data.py  import_divar_reference_data.py  import_hamrah_catalog.py  import_khodro45_catalog.py  init_db.py  insert_divar_data.sh  kill-api.sh  load_all_catalog_data.sh  local-down.sh  local-first-run.sh  local-up.sh  migrate_catalog_4layer.py  migrate_db.py  revalidate_opportunities.py  run_catalog_import.sh  run_revalidate_opportunities.sh  run_seed_sms_config.sh  seed_catalog.py  seed_sms_config.py  sync_khodro45_slugs.py
src/: main.py
static/: app.js  index.html  paths.js  results.html  results.js  searchable-select.js  style.css  trim-mapping.html  trim-mapping.js
user-portal/: README.md  dashboard.html  index.html  shared-opportunities.html
محاسبه آنلاین قیمت خودرو کارکرده _ خودرو45_files/: 19-aa16c7f0de84b95c.js  2353.d62e1586e5fcc3d5.js  2508-4823b27957cdcaea.js  392edefce98f2dc2.css  js  (+25 more)
(+180 files in other folders)
